--- a/MultiSyncUI/MultiSyncUI.csproj
+++ b/MultiSyncUI/MultiSyncUI.csproj
@@ -75,6 +75,7 @@
     <Compile Include="..\CoreInfo.cs">
       <Link>Properties\CoreInfo.cs</Link>
     </Compile>
+    <Compile Include="FacadeHelper.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
