--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ Thumbs.db
 #Ignore files build by Visual Studio
 *.obj
 *.exe
+*.dll
 *.pdb
 *.user
 *.aps
@@ -19,6 +20,7 @@ Thumbs.db
 *.cache
 *.ilk
 *.log
+~*.*
 [Bb]in
 [Dd]ebug*/
 *.lib
