--- a/OCPlatformProvider/OCPlatformProvider.csproj
+++ b/OCPlatformProvider/OCPlatformProvider.csproj
@@ -53,7 +53,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Release\Fonlow.SyncML.OCPlatformProvider.xml</DocumentationFile>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\..\webapiclientgen\Fonlow.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Fonlow.OpenContacts.Interop, Version=1.2.0.0, Culture=neutral, PublicKeyToken=10c90a2fc24abc14, processorArchitecture=MSIL">
