--- a/OutlookCommon/OutlookCommon.csproj
+++ b/OutlookCommon/OutlookCommon.csproj
@@ -52,7 +52,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\..\webapiclientgen\Fonlow.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Office.Interop.Outlook, Version=14.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
@@ -77,6 +77,7 @@
       <Link>Properties\OutlookInfo.cs</Link>
     </Compile>
     <Compile Include="DeletionLog.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="OutlookDataSourceBase.cs" />
     <Compile Include="OutlookItems.cs" />
     <Compile Include="OutlookItemsSif.cs" />
