--- a/SyncMLElements/SyncMLElements.csproj
+++ b/SyncMLElements/SyncMLElements.csproj
@@ -55,7 +55,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Release\Fonlow.SyncML.SyncMLElements.xml</DocumentationFile>
-    <CodeAnalysisRuleSet>..\SyncMl.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\..\webapiclientgen\Fonlow.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
