--- a/SyncCommonFunc/SyncCommonFunc.csproj
+++ b/SyncCommonFunc/SyncCommonFunc.csproj
@@ -43,7 +43,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>..\Syncml.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\Fonlow.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -73,6 +73,7 @@
       <Link>Properties\CoreInfo.cs</Link>
     </Compile>
     <Compile Include="AccessMessagesInFiles.cs" />
+    <Compile Include="DataUtility.cs" />
     <Compile Include="EventTypes.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
