--- a/TestOutlookSync/app.config
+++ b/TestOutlookSync/app.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="Fonlow.SyncML.Common.ProgramSettings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-      <section name="Fonlow.SyncML.OutlookSync.OutlookSyncSettings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Fonlow.SyncML.Common.ProgramSettings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="Fonlow.SyncML.OutlookSync.OutlookSyncSettings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <userSettings>
@@ -30,8 +30,7 @@
     <Fonlow.SyncML.OutlookSync.OutlookSyncSettings>
       <setting name="CalendarSyncItem" serializeAs="Xml">
         <value>
-          <CalendarSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <CalendarSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <DisplayName>Calendar</DisplayName>
             <ItemType>Calendar</ItemType>
             <LocalDataSourceAssembly>Fonlow.SyncML.OutlookCalendar, Version=1.0.5.0, Culture=neutral, PublicKeyToken=52f279f7e3ee453b</LocalDataSourceAssembly>
@@ -51,8 +50,7 @@
       </setting>
       <setting name="TasksSyncItem" serializeAs="Xml">
         <value>
-          <TasksSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <TasksSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <DisplayName>Tasks</DisplayName>
             <ItemType>Tasks</ItemType>
             <LocalDataSourceAssembly>Fonlow.SyncML.OutlookTasks, Version=1.0.5.0, Culture=neutral, PublicKeyToken=52f279f7e3ee453b</LocalDataSourceAssembly>
@@ -68,8 +66,7 @@
       </setting>
       <setting name="ContactsSyncItem" serializeAs="Xml">
         <value>
-          <ContactsSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <ContactsSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <DisplayName>Contacts</DisplayName>
             <ItemType>Contacts</ItemType>
             <LocalDataSourceAssembly>Fonlow.SyncML.OutlookContacts, Version=1.0.5.0, Culture=neutral, PublicKeyToken=52f279f7e3ee453b</LocalDataSourceAssembly>
@@ -85,8 +82,7 @@
       </setting>
       <setting name="NotesSyncItem" serializeAs="Xml">
         <value>
-          <NotesSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <NotesSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <DisplayName>Notes</DisplayName>
             <ItemType>Notes</ItemType>
             <LocalDataSourceAssembly>Fonlow.SyncML.OutlookNotes, Version=1.0.5.0, Culture=neutral, PublicKeyToken=52f279f7e3ee453b</LocalDataSourceAssembly>
@@ -102,4 +98,4 @@
       </setting>
     </Fonlow.SyncML.OutlookSync.OutlookSyncSettings>
   </userSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
