--- a/OutlookSyncMLAddIn/App.config
+++ b/OutlookSyncMLAddIn/App.config
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="Fonlow.SyncML.Common.ProgramSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
-      <section name="Fonlow.SyncML.OutlookSync.OutlookSyncSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="Fonlow.SyncML.OutlookSync.OutlookSyncSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="Fonlow.SyncML.Common.ProgramSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-      <section name="Fonlow.SyncML.OutlookSync.OutlookSyncSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Fonlow.SyncML.Common.ProgramSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="Fonlow.SyncML.OutlookSync.OutlookSyncSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
 
@@ -48,8 +48,7 @@
     <Fonlow.SyncML.OutlookSync.OutlookSyncSettings>
       <setting name="CalendarSyncItem" serializeAs="Xml">
         <value>
-          <CalendarSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <CalendarSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <DisplayName>Calendar</DisplayName>
             <ItemType>Calendar</ItemType>
             <LocalDataSourceAssembly>Fonlow.SyncML.OutlookCalendar, Version=1.1.0.0, Culture=neutral, PublicKeyToken=AEAA906B09CD6374</LocalDataSourceAssembly>
@@ -69,8 +68,7 @@
       </setting>
       <setting name="TasksSyncItem" serializeAs="Xml">
         <value>
-          <TasksSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <TasksSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <DisplayName>Tasks</DisplayName>
             <ItemType>Tasks</ItemType>
             <LocalDataSourceAssembly>Fonlow.SyncML.OutlookTasks, Version=1.1.0.0, Culture=neutral, PublicKeyToken=AEAA906B09CD6374</LocalDataSourceAssembly>
@@ -86,8 +84,7 @@
       </setting>
       <setting name="ContactsSyncItem" serializeAs="Xml">
         <value>
-          <ContactsSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <ContactsSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <DisplayName>Contacts</DisplayName>
             <ItemType>Contacts</ItemType>
             <LocalDataSourceAssembly>Fonlow.SyncML.OutlookContacts, Version=1.1.0.0, Culture=neutral, PublicKeyToken=AEAA906B09CD6374</LocalDataSourceAssembly>
@@ -103,8 +100,7 @@
       </setting>
       <setting name="NotesSyncItem" serializeAs="Xml">
         <value>
-          <NotesSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <NotesSyncItem xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <DisplayName>Notes</DisplayName>
             <ItemType>Notes</ItemType>
             <LocalDataSourceAssembly>Fonlow.SyncML.OutlookNotes, Version=1.1.0.0, Culture=neutral, PublicKeyToken=AEAA906B09CD6374</LocalDataSourceAssembly>
@@ -120,4 +116,4 @@
       </setting>
     </Fonlow.SyncML.OutlookSync.OutlookSyncSettings>
   </userSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
